# agent-scope-research-workbench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
evals/benchmarks/: agent_research_v1.jsonl
examples/: questions.md
src/agent_scope/: cli.py  config.py  dashboard.py  graph.py  llm.py  models.py  prompts.py  run_artifacts.py  state.py
src/agent_scope/agents/: critic.py  perspective.py  planner.py  researcher.py  reviser.py  supervisor.py  verifier.py  writer.py
src/agent_scope/evals/: __init__.py  rubric.py  run_eval.py
src/agent_scope/tools/: search.py
src/agent_scope/utils/: json_utils.py
